test/interpreter/errors/include_truncated.cc
#inclu
[[err]]---------------------------------------------
1:0: ignorando la macro 'inclu'
